combine comp ver 1