@@ -3,7 +3,6 @@ package com.aniping.anipingapp.admin.adNotice.service;
 import com.aniping.anipingapp.admin.adNotice.dto.AdNoticeDto;
 import com.aniping.anipingapp.admin.adNotice.entity.AdNoticeEntity;
 import com.aniping.anipingapp.admin.adNotice.repository.AdNoticeRepository;
-import com.aniping.anipingapp.admin.adUser.repository.AdUserRepository;
 import com.aniping.anipingapp.user.entity.UserEntity;
 import com.aniping.anipingapp.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -11,68 +10,52 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class AdNoticeService {
+
     private final AdNoticeRepository adNoticeRepository;
-    private final AdUserRepository aduserRepository;
+    private final UserRepository userRepository;
 
-    //조회
-    public List<AdNoticeDto> getAllNotices() {
-        return adNoticeRepository.findAllByBoardTypeAndDeleteAtIsNullOrderByIdDesc(AdNoticeEntity.BoardType.notification)
+    public List<AdNoticeDto> findAllNotices() {
+        return adNoticeRepository.findAllByBoardTypeAndDeleteAtIsNullOrderByIdDesc(AdNoticeEntity.BoardType.NOTIFICATION)
                 .stream()
-                .map(AdNoticeDto::fromEntity)
-                .toList();
+                .map(AdNoticeDto::fromEntity) // ::new 대신 fromEntity 사용
+                .collect(Collectors.toList());
     }
 
-    //삭제
     @Transactional
-    public void deleteNotice(Integer id) {
-        AdNoticeEntity notice = adNoticeRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("삭제할 게시글이 없습니다. id=" + id));
-        notice.deletedTime();
-        adNoticeRepository.save(notice);
-    }
+    public AdNoticeDto createNotice(AdNoticeDto adNoticeDto, String loginId) {
+        UserEntity user = userRepository.findByLoginId(loginId)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
-    //추가
-    @Transactional
-    public AdNoticeDto saveNotice(String title, String content, Integer userId) {
-        UserEntity user = aduserRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자입니다. id=" + userId));
-
-        AdNoticeEntity notice = AdNoticeEntity.builder()
-                .title(title)
-                .content(content)
+        AdNoticeEntity adNoticeEntity = AdNoticeEntity.builder()
+                .title(adNoticeDto.getTitle())
+                .content(adNoticeDto.getContent())
                 .user(user)
-                .boardType(AdNoticeEntity.BoardType.notification)
+                .boardType(AdNoticeEntity.BoardType.NOTIFICATION)
                 .build();
 
-        AdNoticeEntity saved = adNoticeRepository.save(notice);
-        return AdNoticeDto.fromEntity(saved);
+        AdNoticeEntity savedEntity = adNoticeRepository.save(adNoticeEntity);
+        return AdNoticeDto.fromEntity(savedEntity); // ::new 대신 fromEntity 사용
     }
 
-    //수정
     @Transactional
-    public void updateNotice(Integer id, String title, String content) {
-        AdNoticeEntity notice = adNoticeRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("수정할 게시글이 없습니다. id=" + id));
-        notice.updateNotice(title, content);
+    public AdNoticeDto updateNotice(Integer id, AdNoticeDto adNoticeDto) {
+        AdNoticeEntity adNoticeEntity = adNoticeRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("해당 공지사항을 찾을 수 없습니다."));
+
+        adNoticeEntity.updateNotice(adNoticeDto.getTitle(), adNoticeDto.getContent());
+        return AdNoticeDto.fromEntity(adNoticeEntity); // ::new 대신 fromEntity 사용
     }
 
-
-    //검색
-    public List<AdNoticeDto> searchNoticesByTitle(String keyword) {
-        return adNoticeRepository.findByTitleContainingAndBoardType(
-                        keyword,
-                        AdNoticeEntity.BoardType.notification
-                )
-                .stream()
-                .map(AdNoticeDto::fromEntity)
-                .toList();
+    @Transactional
+    public void deleteNotice(Integer id) {
+        AdNoticeEntity adNoticeEntity = adNoticeRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("해당 공지사항을 찾을 수 없습니다."));
+        adNoticeEntity.deletedTime();
     }
-
-
-
 }
